[package]
name = "agpay-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# ethereum
rlp = { version = "0.5.2", default-features = false, features = ["std"] }
ethers-rs = "^0.1"

serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }


# crypto
k256 = "^0.12"
rand = { version = "^0.8.5", features = ["getrandom"] }


# 
anyhow = "1.0.68"
thiserror = "1.0.38"
log = "0.4.16"


[dev-dependencies]
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
async-std = { version = "1.11.0", features = ["attributes", "default"] }
criterion = { version = "0.4", features = ["async_futures", "html_reports"] }
